[gd_scene format=3 uid="uid://dl7ijtea5htd7"]

[ext_resource type="Script" uid="uid://ih6a02j5avg5" path="res://Scripts/battle_scene.gd" id="1_e5vbs"]
[ext_resource type="Theme" uid="uid://2q3vbk6bmh2r" path="res://Themes/default_theme.tres" id="2_anwxn"]
[ext_resource type="Script" uid="uid://b4h7jgw5xhajg" path="res://Scripts/background_sprite.gd" id="2_e5vbs"]
[ext_resource type="PackedScene" uid="uid://cvj375674d1g6" path="res://Scenes/window_default.tscn" id="2_hdvqd"]
[ext_resource type="PackedScene" uid="uid://b2xgn7kfu62ix" path="res://player/texture_button.tscn" id="5_3gnqe"]
[ext_resource type="Script" uid="uid://hwl1a3d4oayi" path="res://Scripts/options.gd" id="5_20f6w"]
[ext_resource type="FontFile" uid="uid://ctac5wch5ukxl" path="res://Art Assets/VCR_OSD_MONO_1.001.ttf" id="5_w4764"]
[ext_resource type="PackedScene" uid="uid://7cngnj2uueoh" path="res://enemy/battle_enemy.tscn" id="6_gt16y"]
[ext_resource type="Texture2D" uid="uid://c1j1362w6ubul" path="res://Art Assets/python snik/python-yellow.png" id="9_f4ggb"]
[ext_resource type="PackedScene" uid="uid://br7u57xwhx6m4" path="res://Python Scenes/control.tscn" id="10_ms847"]
[ext_resource type="PackedScene" uid="uid://cjbitdt03r8sc" path="res://Scenes/health_bar.tscn" id="11_health"]

[sub_resource type="LabelSettings" id="LabelSettings_ms847"]
font = ExtResource("5_w4764")
font_size = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ms847"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f4ggb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wb0gu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_84vmf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xdap8"]

[sub_resource type="Theme" id="Theme_gt16y"]
Button/font_sizes/font_size = 40
Button/styles/disabled = SubResource("StyleBoxEmpty_ms847")
Button/styles/focus = SubResource("StyleBoxEmpty_f4ggb")
Button/styles/hover = SubResource("StyleBoxEmpty_wb0gu")
Button/styles/normal = SubResource("StyleBoxEmpty_84vmf")
Button/styles/pressed = SubResource("StyleBoxEmpty_xdap8")

[node name="Battle" type="Control" unique_id=1679799861]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e5vbs")

[node name="Background_Sprite" type="Sprite2D" parent="." unique_id=1689687856]
position = Vector2(961.6667, 539.5)
scale = Vector2(5.983333, 5.983333)
script = ExtResource("2_e5vbs")

[node name="BattleLayout" type="CanvasLayer" parent="." unique_id=2041257941]

[node name="Battle" type="Control" parent="BattleLayout" unique_id=211066321]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_anwxn")
metadata/_edit_use_anchors_ = true

[node name="Bottom" type="HBoxContainer" parent="BattleLayout/Battle" unique_id=751804661]
custom_minimum_size = Vector2(870, 240)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -511.0
offset_top = -266.0
offset_right = 511.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="Enemy" parent="BattleLayout/Battle/Bottom" unique_id=1390448455 instance=ExtResource("2_hdvqd")]
layout_mode = 2
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="BattleLayout/Battle/Bottom/Enemy" unique_id=1584942318]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 784.0
offset_top = -740.0
offset_right = 948.0
offset_bottom = -740.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BattleLayout/Battle/Bottom/Enemy/MarginContainer" unique_id=200265216]
layout_mode = 2

[node name="Name" type="Label" parent="BattleLayout/Battle/Bottom/Enemy/MarginContainer/VBoxContainer" unique_id=1510006207]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_w4764")
theme_override_font_sizes/font_size = 40
text = "ENEMY"
horizontal_alignment = 2

[node name="HealthBar" parent="BattleLayout/Battle/Bottom/Enemy/MarginContainer/VBoxContainer" unique_id=1450825967 instance=ExtResource("11_health")]
layout_mode = 2
show_percentage = true

[node name="Player" parent="BattleLayout/Battle/Bottom" unique_id=681813518 instance=ExtResource("2_hdvqd")]
layout_mode = 2
size_flags_stretch_ratio = 1.5
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="BattleLayout/Battle/Bottom/Player" unique_id=726582018]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -744.0
offset_top = -737.0
offset_right = -744.0
offset_bottom = -737.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BattleLayout/Battle/Bottom/Player/MarginContainer" unique_id=1090182692]
layout_mode = 2

[node name="Name" type="Label" parent="BattleLayout/Battle/Bottom/Player/MarginContainer/VBoxContainer" unique_id=1510006206]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_w4764")
theme_override_font_sizes/font_size = 40
text = "PLAYER"

[node name="HealthBar" parent="BattleLayout/Battle/Bottom/Player/MarginContainer/VBoxContainer" unique_id=613565356 instance=ExtResource("11_health")]
layout_mode = 2
value = 150.0
show_percentage = true

[node name="MagicCooldownLabel" type="Label" parent="BattleLayout/Battle/Bottom/Player/MarginContainer/VBoxContainer" unique_id=1852447080]
layout_mode = 2
theme_override_font_sizes/font_size = 25
label_settings = SubResource("LabelSettings_ms847")

[node name="UltimateCooldownLabel" type="Label" parent="BattleLayout/Battle/Bottom/Player/MarginContainer/VBoxContainer" unique_id=1251371217]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="DefendCooldownLabel" type="Label" parent="BattleLayout/Battle/Bottom/Player/MarginContainer/VBoxContainer" unique_id=1118336133]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="Options" parent="BattleLayout/Battle" unique_id=1568290121 instance=ExtResource("2_hdvqd")]
custom_minimum_size = Vector2(240, 240)
layout_mode = 0
offset_left = 586.0
offset_top = 813.0
offset_right = 826.0
offset_bottom = 1053.0
size_flags_stretch_ratio = 1.5
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Options" type="VBoxContainer" parent="BattleLayout/Battle/Options" unique_id=566978831]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
script = ExtResource("5_20f6w")

[node name="Fight" type="Button" parent="BattleLayout/Battle/Options/Options" unique_id=1718858640]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Magic")
theme = SubResource("Theme_gt16y")
text = "FIGHT"

[node name="Magic" type="Button" parent="BattleLayout/Battle/Options/Options" unique_id=293121347]
layout_mode = 2
text = "MAGIC"

[node name="Defend" type="Button" parent="BattleLayout/Battle/Options/Options" unique_id=377599586]
layout_mode = 2
text = "DEFEND"

[node name="Ultimate" type="Button" parent="BattleLayout/Battle/Options/Options" unique_id=155099948]
layout_mode = 2
text = "ULTIMATE"

[node name="Player" type="Control" parent="BattleLayout/Battle" unique_id=538970654]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_20f6w")

[node name="PythonPlayer" parent="BattleLayout/Battle/Player" unique_id=720653474 instance=ExtResource("5_3gnqe")]
layout_mode = 0
offset_left = 207.0
offset_top = 548.0
offset_right = 237.0
offset_bottom = 581.67346
texture_normal = ExtResource("9_f4ggb")
texture_pressed = ExtResource("9_f4ggb")
texture_hover = ExtResource("9_f4ggb")
texture_disabled = ExtResource("9_f4ggb")
stretch_mode = 3

[node name="Enemies" type="Control" parent="BattleLayout/Battle" unique_id=1085447989]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_20f6w")

[node name="PythonEnemy" parent="BattleLayout/Battle/Enemies" unique_id=2130753595 instance=ExtResource("6_gt16y")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.7
anchor_right = 0.75
anchor_bottom = 0.95
offset_left = 1463.0
offset_top = 538.0
offset_right = 1471.3334
offset_bottom = 559.80273
grow_horizontal = 1
grow_vertical = 1
stretch_mode = 3

[node name="Control" parent="BattleLayout" unique_id=526634901 instance=ExtResource("10_ms847")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
metadata/_edit_use_anchors_ = true

[node name="Lose" type="Label" parent="BattleLayout" unique_id=529236765]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -7.5
offset_right = 20.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_anwxn")
theme_override_font_sizes/font_size = 100
text = "YOU LOSE!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Win" type="Label" parent="BattleLayout" unique_id=67568438]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -7.5
offset_right = 20.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_anwxn")
theme_override_font_sizes/font_size = 100
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Info" type="Label" parent="BattleLayout" unique_id=1870797794]
custom_minimum_size = Vector2(400, 80)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -255.0
offset_top = 9.0
offset_right = 255.0
offset_bottom = 111.0
grow_horizontal = 2
theme = ExtResource("2_anwxn")
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_font_sizes/font_size = 50
text = "PLAYER'S TURN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestionInfo" type="Label" parent="BattleLayout" unique_id=1570385252]
visible = false
custom_minimum_size = Vector2(645, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.5
offset_top = -542.0
offset_right = 322.5
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_anwxn")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "ENEMY GOT IT RIGHT"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_focused" from="BattleLayout/Battle/Options/Options" to="." method="_on_options_button_focused"]
[connection signal="button_pressed" from="BattleLayout/Battle/Options/Options" to="." method="_on_options_button_pressed"]
